--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="https://www.linkedin.com/in/anne-mostert-052321220/" target="_blank">LinkedIn</a> •
         <a href="./Curriculum Vitae_Anne Mostert.pdf" target="_blank">CV</a> •
         <a href="./Portfolio Anne Mostert.pdf.odp" target="_blank">Portfolio</a> •
-        <a href="mailto:c.w.a.mostert@student.tudelft.nl">email</a>
+        <a href="mailto:c.w.a.mostert@student.tudelft.nl">Email</a>
         <!-- <a href="tel:+3164895....">phone</a> -->
     </p>
 </body>
