--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
 <body>
     <!-- alles wat je ziet op website -->
     <h1>Anne Mostert</h1>
-    <img src="./AnneMostert.jpg"
-    alt="Picture of me" />
-    <p class="textaboutme">Hi! My name is Anne Mostert, it is nice to meet you! 
+    <div class="container"> 
+        
+        <div class="picture">
+        <img src="./AnneMostert.jpg"
+        alt="Picture of me" />
+    </div>
+    
+    <div class="paragraph"> <p class="textaboutme">Hi! My name is Anne Mostert, it is nice to meet you! 
         I joined the master programme <a href="https://www.tudelft.nl/onderwijs/opleidingen/masters/dfi/msc-design-for-interaction" target="_blank">Design for Interaction</a> at the faculty of Industrial Design Engineering at the TU Delft this year.
         I am interested in social design, solving social issues and doing so by focussing on the user and their needs, emotions and motives. I love getting to know the user deeply by interviewing and observing and work together with them on designing products, services and systems.
         My goal is to help people transition into more eco-friendly and socially equal behavior. I like to focus on social and seamless design in order to create a more sustainable future. 
         Visualizing and communicating design is my main strong suit. Next to that, I am good at doing research, I am a good listener and I can analyse data well. Furthermore, I am familiar with different ideation techniques for creative problem solving and thinking outside of the box.
         Currently, I am looking for a bussiness where I can do my graduation project, feel free to contact me!
-    </p>
+    </p></div>
+</div>
+   
+   
     <p class="links">
         <a href="https://www.linkedin.com/in/anne-mostert-052321220/" target="_blank">LinkedIn</a> •
         <a href="./Curriculum Vitae_Anne Mostert.pdf" target="_blank">CV</a> •
